feat: 填入 LIFF ID（驗證、購買）；更新 GPTs 文案與部署檢查清單

--- a/liff/buy/index.html
+++ b/liff/buy/index.html
@@ -34,7 +34,7 @@
   <div id="error" class="error" style="display: none;"></div>
   <script>
     window.API_BASE = window.API_BASE || (window.location.origin + '/api');
-    window.LIFF_ID = window.LIFF_ID || '';
+    window.LIFF_ID = window.LIFF_ID || '2009037947-idHd7wHf';
   </script>
   <script src="app.js"></script>
 </body>
