--- a/liff/verify/index.html
+++ b/liff/verify/index.html
@@ -28,7 +28,7 @@
   <div id="error" class="error" style="display: none;"></div>
   <script>
     window.API_BASE = window.API_BASE || (window.location.origin + '/api');
-    window.LIFF_ID = window.LIFF_ID || ''; // 請替換為你的 LIFF ID，或由後端注入
+    window.LIFF_ID = window.LIFF_ID || '2009037947-gMrzQYWv';
   </script>
   <script src="app.js"></script>
 </body>
